--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "Leo Kim<me@leok.kr>",
   "license": "AGPL-3.0",
   "dependencies": {
+    "create-dmg": "^5.3.0",
     "nativefier": "^43.1.3"
   },
   "scripts": {
-    "build": "node ."
+    "build": "node .",
+    "postbuild": "create-dmg 'Discord M1-darwin-arm64/Discord M1.app'"
   }
 }
